EVA-52 Feat: Se agrega la visualización de las notas en el detalle del historial

--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -116,6 +116,9 @@
                                                                                                             <b>Versión: </b> {{ hst.version }}
                                                                                                         </small>
                                                                                                         <small class="mt-0 mb-1 text-muted">
+                                                                                                            <b>Notas: </b> {{ hst.notas }}
+                                                                                                        </small>
+                                                                                                        <small class="mt-0 mb-1 text-muted">
                                                                                                             <b>Estado del Documento: </b> {{ hst.estado }}
                                                                                                         </small>
                                                                                                     </h5>
