EVA-52 Refactor: Se modifica la la palabra aprobación por Colaborador en el detalle del historial Tambien se modifica en el modal de detalle de solicitud de aprobación

--- a/SGI/templates/SGI/AprobacionDocumentos/detalle_solicitud_aprobacion.html
+++ b/SGI/templates/SGI/AprobacionDocumentos/detalle_solicitud_aprobacion.html
@@ -20,7 +20,7 @@
                         <div class="p-3">
                             <h5>
                                 <small class="mt-0 mb-1">
-                                    <b>Aprobación: </b> {{ archivo.usuario.get_full_name }}
+                                    <b>Colaborador: </b> {{ archivo.usuario.get_full_name }}
                                 </small>
                                 <small class="mt-0 mb-1 text-muted">
                                     <b>Estado: </b> {{ archivo.estado }}
