--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -129,7 +129,7 @@
                                                                                                             {% if res.archivo.id == hst.id %}
                                                                                                                 <h5 class="p-l-10">
                                                                                                                     <small class="mt-0 mb-1 text-muted">
-                                                                                                                        <b>Aprobación: </b> {{ res.usuario.get_full_name }}
+                                                                                                                        <b>Colaborador: </b> {{ res.usuario.get_full_name }}
                                                                                                                     </small>
                                                                                                                     <small class="mt-0 mb-1 text-muted">
                                                                                                                         <b>Estado: </b> {{ res.estado }}
