--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -68,6 +68,10 @@ input[type=checkbox] ~ label:before {
     padding-top: 10px !important;
 }
 
+.p-r-10{
+    padding-right: 10px; !important;
+}
+
 .campo_activo{
     background-color: rgba(233, 233, 233, 0.5); !important;
 }
