--- a/SGI/templates/SGI/documentos/cargar-documento.html
+++ b/SGI/templates/SGI/documentos/cargar-documento.html
@@ -16,8 +16,20 @@
             <form action="{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}" id="empresas-form" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
                 {% csrf_token %}
                 <div class="form-group">
-                    <div class="m-b-10">
+                    <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons" style="float: right">
+                        <label class="btn btn-default waves-effect waves-themed active" onclick="cambioCheck('archivo')">
+                            <input type="radio" name="tipo_archivo" id="radio_archivo" checked="" value="archivo"> Archivo
+                        </label>
+                        <label class="btn btn-default waves-effect waves-themed" onclick="cambioCheck('vinculo')">
+                            <input type="radio" name="tipo_archivo" id="radio_vinculo" value="vinculo"> Vínculo
+                        </label>
+                    </div>
+                    <br>
+                    <div class="m-b-10" id="div_archivo" style="display:none;">
                         {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" required="" modal=True invalido=errores.logo accept=".docx, .pptx, .xlsx, .xlsm, .pdf" mensaje_validacion='Por favor seleccione un archivo'%}
+                    </div>
+                    <div class="m-b-10" id="div_vinculo" style="display:none;">
+                        {% input_text_tag 'vinculo' 'Vínculo' placeholder="Ingrese el vínculo" required="" maxlength="300" value=documento.vinculo mensaje_validacion='Por favor digite ingrese el vínculo' invalido=errores.vinculo %}
                     </div>
                     <div class="m-b-10">
                         {% input_date_tag 'fecha_documento' 'Fecha del Documento' placeholder="Seleccione una fecha"   required="" modal=True value=archivo.fecha_documento autocomplete="off"  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_documento %}
