EVA-52 Fix: Se quita la función realizada en el js de treeview Se crea un archivo para la función

--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -181,4 +181,5 @@
     <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js'%}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'SGI/js/modalCargarArchivo.js' %}"></script>
+    <script src="{% static 'SGI/js/alrboDocumentos.js' %}"></script>
 {% endblock scripts%}
