--- a/SGI/templates/SGI/documentos/cargar-documento.html
+++ b/SGI/templates/SGI/documentos/cargar-documento.html
@@ -25,11 +25,11 @@
                         </label>
                     </div>
                     <br>
-                    <div class="m-b-10" id="div_archivo" style="display:none;">
+                    <div class="m-b-10 div_archivo">
                         {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" required="" modal=True invalido=errores.logo accept=".docx, .pptx, .xlsx, .xlsm, .pdf" mensaje_validacion='Por favor seleccione un archivo'%}
                     </div>
-                    <div class="m-b-10" id="div_vinculo" style="display:none;">
-                        {% input_text_tag 'vinculo' 'Vínculo' placeholder="Ingrese el vínculo" required="" maxlength="300" value=documento.vinculo mensaje_validacion='Por favor digite ingrese el vínculo' invalido=errores.vinculo %}
+                    <div class="m-b-10 div_vinculo" style="display:none;">
+                        {% input_text_tag 'vinculo' 'Vínculo' placeholder="Ingrese el vínculo" maxlength="300" value=documento.vinculo mensaje_validacion='Por favor digite ingrese el vínculo' invalido=errores.vinculo %}
                     </div>
                     <div class="m-b-10">
                         {% input_date_tag 'fecha_documento' 'Fecha del Documento' placeholder="Seleccione una fecha"   required="" modal=True value=archivo.fecha_documento autocomplete="off"  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_documento %}
