--- a/SGI/templates/SGI/documentos/cargar-documento.html
+++ b/SGI/templates/SGI/documentos/cargar-documento.html
@@ -20,16 +20,16 @@
                         <label class="btn btn-default waves-effect waves-themed active" onclick="cambioCheck('archivo')">
                             <input type="radio" name="tipo_archivo" id="radio_archivo" checked="" value="archivo"> Archivo
                         </label>
-                        <label class="btn btn-default waves-effect waves-themed" onclick="cambioCheck('vinculo')">
-                            <input type="radio" name="tipo_archivo" id="radio_vinculo" value="vinculo"> Vínculo
+                        <label class="btn btn-default waves-effect waves-themed" onclick="cambioCheck('enlace')">
+                            <input type="radio" name="tipo_archivo" id="radio_enlace" value="enlace"> Enlace
                         </label>
                     </div>
                     <br>
                     <div class="m-b-10 div_archivo">
                         {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" required="" modal=True invalido=errores.logo accept=".docx, .pptx, .xlsx, .xlsm, .pdf" mensaje_validacion='Por favor seleccione un archivo'%}
                     </div>
-                    <div class="m-b-10 div_vinculo" style="display:none;">
-                        {% input_text_tag 'vinculo' 'Vínculo' placeholder="Ingrese el vínculo" maxlength="300" modal=True value=documento.vinculo mensaje_validacion='Por favor digite ingrese el vínculo' invalido=errores.vinculo %}
+                    <div class="m-b-10 div_enlace" style="display:none;">
+                        {% input_text_tag 'enlace' 'Enlace' placeholder="Ingrese el enlace" maxlength="300" modal=True value=documento.enlace mensaje_validacion='Por favor digite ingrese el enlace' invalido=errores.enlace %}
                     </div>
                     <div class="m-b-10">
                         {% input_date_tag 'fecha_documento' 'Fecha del Documento' placeholder="Seleccione una fecha"   required="" modal=True value=archivo.fecha_documento autocomplete="off"  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_documento %}
