--- a/GestionDocumental/templates/GestionDocumental/index.html
+++ b/GestionDocumental/templates/GestionDocumental/index.html
@@ -13,7 +13,7 @@
     {% block main %}
         <div class="subheader">
             <h1 class="subheader-title">
-                <i class='fal fa-cog'></i> Gestión Documental <span class='fw-300'></span>
+                <i class="subheader-icon fal fa-archive"></i> Gestión Documental
                 <small>
 
                 </small>
