EVA-80 Feat: Se modifica el template index de ConsecutivoDocumento para agregar formato a la fecha

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoDocumento/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoDocumento/index.html
@@ -54,7 +54,7 @@
                                                         {% for consecutivo in consecutivos %}
                                                             <tr>
                                                                 <td>{{ consecutivo.codigo}}</td>
-                                                                <td>{{ consecutivo.fecha }}</td>
+                                                                <td>{{ consecutivo.fecha | date:'Y-m-d H:m'}}</td>
                                                                 <td>{% if consecutivo.contrato %}{{ consecutivo.contrato}}{% else %}{{ consecutivo.usuario }}{% endif %}</td>
                                                                 <td>{{ consecutivo.detalle}}</td>
                                                                 <td>{{ consecutivo.destinatario }}</td>
