--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoDocumento/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoDocumento/index.html
@@ -36,38 +36,47 @@
                         {% endif %}
                         <div class="panel-container show">
                             <div class="panel-content">
-                                    <div class="panel-group">
-                                        <div class="panel-body">
-                                            <div class="table-responsive">
-                                                <table class="table table-bordered w-100" id="dataTable">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Código</th>
-                                                            <th>Fecha</th>
-                                                            <th>Contrato</th>
-                                                            <th>Detalle</th>
-                                                            <th>Destinatario</th>
-                                                            <th>Usuario</th>
+                                <div class="panel-group">
+                                    <div class="panel-body">
+                                        <div class="table-responsive">
+                                            <table class="table table-bordered w-100" id="dataTableConsecutivos">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Código</th>
+                                                        <th>Fecha</th>
+                                                        <th>Contrato</th>
+                                                        <th>Detalle</th>
+                                                        <th>Destinatario</th>
+                                                        <th>Usuario</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for consecutivo in consecutivos %}
+                                                        <tr {% if consecutivo.fecha.date == fecha.date and consecutivo == consecutivos.last and id_filtro == 1 %}style="background: #fffaee;"{% endif %}>
+                                                            <td>{{ consecutivo.codigo}}</td>
+                                                            <td>{{ consecutivo.fecha | date:'Y-m-d H:m'}}</td>
+                                                            <td>{% if consecutivo.contrato %}
+                                                                    {{ consecutivo.contrato}}
+                                                                {% else %}
+                                                                    {% for col in colaborador %}
+                                                                        {% if col.usuario_id == consecutivo.usuario.id %}
+                                                                            {{ col.proceso__sigla }}
+                                                                        {% endif %}
+                                                                    {% endfor %}
+                                                                {% endif %}
+                                                            </td>
+                                                            <td>{{ consecutivo.detalle}}</td>
+                                                            <td>{{ consecutivo.destinatario }}</td>
+                                                            <td>{{ consecutivo.usuario }}</td>
                                                         </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        {% for consecutivo in consecutivos %}
-                                                            <tr>
-                                                                <td>{{ consecutivo.codigo}}</td>
-                                                                <td>{{ consecutivo.fecha | date:'Y-m-d H:m'}}</td>
-                                                                <td>{% if consecutivo.contrato %}{{ consecutivo.contrato}}{% else %}{{ consecutivo.usuario }}{% endif %}</td>
-                                                                <td>{{ consecutivo.detalle}}</td>
-                                                                <td>{{ consecutivo.destinatario }}</td>
-                                                                <td>{{ consecutivo.usuario }}</td>
-                                                            </tr>
-                                                        {% endfor %}
-                                                    </tbody>
-                                                </table>
-                                            </div>
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
                                         </div>
-                                        <div class="card-footer small text-muted">Actualizado: {{ fecha }}</div>
                                     </div>
+                                    <div class="card-footer small text-muted">Actualizado: {{ fecha }}</div>
                                 </div>
+                            </div>
                         </div>
                     </div>
                 </div>
