--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoDocumento/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoDocumento/index.html
@@ -22,18 +22,21 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div id="panel-1" class="panel">
-                        {% if perms.GestionDocumental.add_consecutivodocumento %}
+
                         <div class="panel-hdr">
+                            {% if perms.GestionDocumental.add_consecutivodocumento %}
                             <div class="col-md-10">
                                 <small>
                                      <a class="far fa-3x far fa-plus-circle"  href="{% url 'GestionDocumental:consecutivo-documento-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar consecutivo de documento"></a>
                                 </small>
                             </div>
+                            {% else %}
+                            <div class="col-md-10"></div>
+                            {% endif %}
                             <div class="col-md-2" style="float: right" >
                                 {% select_tag opciones_filtro 'filtro_consecutivos' '' value=id_filtro  %}
                             </div>
                         </div>
-                        {% endif %}
                         <div class="panel-container show">
                             <div class="panel-content">
                                 <div class="panel-group">
