--- a/SGI/templates/SGI/documentos/crear-editar.html
+++ b/SGI/templates/SGI/documentos/crear-editar.html
@@ -39,7 +39,7 @@
                                                 {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" required="" maxlength="100" value=documento.nombre mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre %}
                                             </div>
                                             <div class="col-md-6">
-                                                {% input_text_tag 'codigo' 'Código' placeholder="Ingrese el código" required="" maxlength="100" value=documento.codigo mensaje_validacion='Por favor digite el código' invalido=errores.codigo %}
+                                                {% input_text_tag 'codigo' 'Código' placeholder="Ingrese el código" required="" maxlength="100" value=documento.codigo mensaje_validacion='Por favor digite el código' invalido=errores.codigo onkeypress="return validarCE(event)" %}
                                             </div>
                                         </div>
                                     </div>
@@ -74,6 +74,7 @@
     <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validarCaracteresEspeciales.js' %}"></script>
     <script>
         $(document).ready(function () {
             $('.select2').select2();
