EVA-83 Feat: Se agrega un estilo para resaltar la foto de perfil actual para que sea llamativo

--- a/TalentoHumano/static/TalentoHumano/css/cambiarFotoDePerfil.css
+++ b/TalentoHumano/static/TalentoHumano/css/cambiarFotoDePerfil.css
@@ -8,3 +8,11 @@
     display:block;
     margin:auto;
 }
+
+.foto_perfil_acual{
+  transition: background-color .5s;
+}
+
+.foto_perfil_acual:hover {
+  background-color: #b19dce;
+}
